@@ -5,6 +5,9 @@
    - stevesk@cvs.openbsd.org 2001/12/06 18:02:32
      [channels.c sshconnect.c]
      shutdown(sock, SHUT_RDWR) not needed here; ok markus@
+   - stevesk@cvs.openbsd.org 2001/12/06 18:09:23
+     [channels.c session.c]
+     strncpy->strlcpy.  remaining strncpy's are necessary.  ok markus@
 
 20011206
  - (bal) OpenBSD CVS Sync
